Recording building version B001.

--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
 <body>
   <h1>chromium学习记录</h1>
   <div id="summary" style="font-size:24px">
-      最近对chromium兴趣越来越大，所以自己下了一套代码，以便工作之余学习，在这里记录一下学习过程。
+      对chromium产生了浓厚的兴趣，自己下了一套代码，以便工作之余学习，在这里记录一下学习过程。
   </div>
+
+  <br/> 
+
   <div>
     <a href = "version/B001/b001.html">第一版B001</div>
   </div>
+
+  <br/>
+
   <div>
      <a href = "FullScreenTEST/FullScreenTEST/test.html">test</a></br>
-     <a href = "34/3to4screen.html">3:4宽高比</a></br>
   </div>
   <script>
   </script>
