--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf8">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>FullscreenTEST</title>
+  <title>myTEST</title>
   <style type="text/css">
      body {text-align:center;}
      a {font-size:24px;margin:10px;height:100px}
@@ -22,7 +22,11 @@
   <br/> 
 
   <div>
-    <a href = "version/B001/b001.html">第一版B001</div>
+    <a href = "version/B001/b001.html">第一版B001</a>
+  </div>
+
+  <div>
+    <a href = "version/B002/b002.html">第二版B002</a>
   </div>
 
   <br/>
