--- a/version/B001/b001.html
+++ b/version/B001/b001.html
@@ -14,7 +14,7 @@
 </head>
 
 <body style = "margin : 40px 40px 40px 40px;">
-  <h1>B001</h1>
+  <h1>B001: begin</h1>
   <div id="summary" style="font-size:24px">
       &emsp;按照官网的方法，编译了第一版chromium。首先找个视频试一下，直接不能放，抓日志看一下，报video decoder initialization failed错误。如下图：
   </div>
