--- a/version/B001/b001.html
+++ b/version/B001/b001.html
@@ -41,7 +41,7 @@
   <br/>
 
    <div style="font-size:24px">
-     &emsp;2、enable_ffmpeg_video_decoders，在android平台下编译ffmpeg时是剔除video的Demuxer和Decoder，chromium使用自己的demuxer和decoder；
+     &emsp;2、enable_ffmpeg_video_decoders，在android平台下编译ffmpeg时是剔除video的Decoder，chromium使用自己的demuxer和decoder；
    </div>
 
    <br/>
