--- a/version/B002/b002.html
+++ b/version/B002/b002.html
@@ -112,8 +112,8 @@
   <br/>
 
   <div id="summary" style="font-size:24px">
-    &emsp;当前UMPipeline的播放能力基本能覆盖主流音视频格式。AndroidmediaPlayer已经基本不再使用。重点研究对象还是UMPipeline。UMPipeline分成个部分：DataSource(源)、Demuxer(分离器)，VideoDecoder(视频解码器)、
-    AudioDecoder(音频解码器)、VideoRenderer(视频渲染)、AudioRenderer(音频渲染)。如下图：
+    &emsp;当前UMPipeline的播放能力基本能覆盖主流音视频格式。AndroidmediaPlayer已经基本不再使用，老罗的博客又详细介绍，所以本次重点研究对象还是UMPipeline。UMPipeline分成个部分：DataSource(源)、Demuxer(分离器）
+    VideoDecoder(视频解码器)、AudioDecoder(音频解码器)、VideoRenderer(视频渲染)、AudioRenderer(音频渲染)。如下图：
   </div>
 
   <br/>
