--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   <br/> 
 
   <div>
-    <a href = "version/B001/b001.html">第一版B001</a>
+    <a href = "version/B001/b001.html">第一版B001 begin</a>
   </div>
 
   <div>
-    <a href = "version/B002/b002.html">第二版B002</a>
+    <a href = "version/B002/b002.html">第二版B002 media--part one</a>
   </div>
 
   <br/>
