update B002 and create B003

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        var style = document.createElement('style');
        style.type = 'text/css'; ;
        style.innerHTML="a{ display:none } span{display:block}"; 
-       document.getElementsByTagName('HEAD').item(0).appendChild(style); 
+       //document.getElementsByTagName('HEAD').item(0).appendChild(style); 
     }
     if (isIOS) {
 　　　　  console.log("ios");
@@ -46,6 +46,10 @@
 
   <div>
     <a href = "version/B002/b002.html">第二版B002 media--part one</a>
+  </div>
+
+  <div>
+    <a href = "version/B003/b003.html">第二版B003 media--part two</a>
   </div>
 
   <br/>
