--- a/version/B003/b003.html
+++ b/version/B003/b003.html
@@ -14,213 +14,15 @@
 </head>
 
 <body style = "margin : 40px 40px 40px 40px;">
-  <h1>B002：media--part1</h1>
-
-  <div style="font-size:24px">
-    &emsp;media模块大量参考老罗的博客：https://blog.csdn.net/Luoshengyang/。
-  </div>
-  
-  <br/>
-
-  <div style="font-size:24px">
-    &emsp;媒体播放是浏览器一个重要的功能，媒体的模块的基础设施如下图：
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "MediaBase.png" align = "middle" width = "30%" height = "230px"></img>
-  </div>
-
-  <br/>
-
-  <div style="font-size:24px">
-    &emsp;1、HTMLMediaElement是w3c标准video/audio标签的具体实现,HTMLMediaElement有两个子类，HTMLVideoElement和HTMLAudioElement，分别为video、audio。每一个&lt;video&gt;/&lt;audio&gt;创建一个HTMLMediaElement节
-    点。HTMLMediaElement负责穿件mediacontrol和mediaplayer，并且发布js接口(媒体专有js接口可以在HTMLMediaElement.idl文件中查看)。
-  </div>
-
-  <br/>
-
-  <div style="font-size:24px">
-    &emsp;2、MediaControl包含若干video/audio的内置元素，负责和用户交互。Mediacontrol的元素都是继承与HTMLDivElement，video的播放按钮，进度条等都是一个个按照规律排放的div块。了解Mediacontrol可以定制播放界面，
-    目前市场常用的浏览器比如qq，uc都定制了自己的播放器UI。mediacontrol的样式在：legacyMediaControls.css和modernMediaControls.css中，本想给每个按钮加个背景色，以显示整体结构，但是修改之后没有生效(63版本直接生效，现
-    在70版本了，不知道做了什么修改)。下图是css加载的默认样式，和匹配的所有样式；最后两行是mediacontrolpanel的所有样式，可以看到修改的红色rgb(255,0,0）参与了样式匹配，但是最后的initial不知道是从哪里读取的。
-    mediacontrol模块相对简单，不详细研究记录了。
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "mediacontrolbk.png" align = "middle" width = "75%" height = "280px"></img>
-  </div>
-
-   <br/>
+  <h1>B002：media--part2</h1>
 
 
   <div style="font-size:24px">
-    &emsp;mediacontrol的结构如下图。笔记本屏幕较小，没有全部截全部，可看media_control_impl.cc。
+    &emsp;本次研究video的surface创建过程，和进入全屏和退出全屏对surface的管理。
   </div>
 
   <br/>
 
-  <div align = "middle" width = "100%">
-     <img src = "MediaControl.png" align = "middle" width = "40%" height = "520px"></img>
-  </div>
-
-  <br/>
-
-  <div style="font-size:24px">
-    &emsp;3、fullscreen是实现全屏功能的模块。video全屏功能是HTMLMediaElement中调用FUllScreen::RequestFullscreen方法实现。视频全屏过程在老罗的博客有详细的介绍。补充一点，全屏过程中的旋转规则：
-  </div>
-  
-  <br/>
-
-  <div style="font-size:24px">
-    &emsp;a、videoWidth &gt; videoHeight，全屏时横屏；
-  </div>
-
-   <br/>
-
-  <div style="font-size:24px">
-    &emsp;b、videoWidth &lt; videoHeight，全屏时竖屏；
-  </div>
-
-   <br/>
-
-  <div style="font-size:24px">
-    &emsp;c、videoWidth = videoHeight， 不变。
-  </div>
-
-  <br/>
-
-  <div style="font-size:24px">
-    &emsp;代码实现逻辑在media_controls_orientation_lock_delegate.cc中。
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "fullscreenOrientation.png" align = "middle" width = "50%" height = "200px"></img>
-  </div>
-
-
-  <br/>
-
-  <div id="summary" style="font-size:24px">
-      &emsp;4、Player,媒体播放播放器。这个是播放的核心，也是最复杂的模块。chromium的方案如下图：
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "PlayerFN.png" align = "middle" width = "50%" height = "200px"></img>
-  </div>
-
-  <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;WebMediaPlayerImpl是播放器的管理类，创建播放器会先调用GetCurrentFactory获取当前的RendererFactory,默认情况下，FactoryType是DEFAULT，DEFAULT使用Unified Media Pipeline。如果FactoryType设为
-    MEDIA_PLAYER，则使用AndroidPlayer。chromium 55版本以后都默认是Unified Media Pipeline，只有当Unified Media Pipeline发生DEMUXER_ERROR_DETECTED_HLS错误时，chromium会fallback到androidplayer。代码在
-    webmediaplayer_impl.cc、renderer_factory_selector.cc中。
-  </div>
-
-  <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;当前UMPipeline的播放能力基本能覆盖主流音视频格式。AndroidmediaPlayer已经基本不再使用，老罗的博客又对androidplayer做了详细介绍，所以本次重点研究对象还是UMPipeline。UMPipeline分成6个部分：DataSource(源)、Demuxer(分离器）
-    VideoDecoder(视频解码器)、AudioDecoder(音频解码器)、VideoRenderer(视频渲染)、AudioRenderer(音频渲染)。如下图：
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "pipeline.png" align = "middle" width = "80%"></img>
-  </div>
-
-  <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;1、DataSource：音视频数据。WebMediaPlayerImpl创建的是他的子类：MultibufferDataSource。DataSource通过ResourceLoader获取当前url的视频源。DataSource创建在WebMediaPlayerimpl::DoLoad方法中。
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "createDataSource.png" align = "middle" width = "80%"></img>
-  </div>
-
-  <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;2、Demuxer：音轨和视轨分离。DataSource创建完毕，会执行WebMediaPlayerImpl::DataSourceInitialized,在DataSourceInitialized的最后执行：StartPipeline方法，就在这时创建Demuxer。WebMediaPlayerImpl创建的是他的子类：FFmpegDemuxer。创建demuxer_时把DataSource以参数的形式传入。如下图
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "CreateDemuxer.png" align = "middle" width = "80%"></img>
-  </div>
-
-  <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;3、videorenderer/videodecoder和audiorenderer/audiodecoder：解码和渲染。这两对是你中有我，我中有你的关系，所以放在一起介绍，demuxer创建完毕后，会调用PipelineController::Start，在这里以回调的方式调用
-    WebMediaPlayerimpl::CreateRenderer创建aduio renderer/decoder、video renderer/decorder。整个过程比较复杂，这里不介绍代码，用三幅图来说明整个过程，方便理解。
-  </div>
-
-  <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;图一，标示source，demuxer和renderer的创建：
-  </div>
-
-   <br/>
-
-   <div align = "middle" width = "100%">
-     <img src = "mediaplayer_1.png" align = "middle" width = "50%" height = "440px"></img>
-   </div>
-
-   <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;图二，接上图的InitializeDemuxer，标示在demuxer initialze中的做的工作：
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "mediaplayer_2.png" align = "middle" width = "40%" height = "440px"></img>
-  </div>
-
-    <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;图三，接上图的InitializeRenderer，标示在decoder initialze中的做的工作：
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "mediaplayer_3.png" align = "middle" width = "40%" height = "580px"></img>
-  </div>
-
-  <br/>
-
-  <div id="summary" style="font-size:24px">
-    &emsp;头晕，单独看每个流程还好，整体来看，越看越晕。或者参看chromium网站的文档，整体的结构图如下图：
-  </div>
-
-  <br/>
-
-  <div align = "middle" width = "100%">
-     <img src = "PipelineFilter.png" align = "middle" width = "40%" height = "550px"></img>
-  </div>
-
-  <br/>
-  
-    <div id="summary" style="font-size:24px">
-    &emsp;media第一部分就写这么多。当然，基础设施创建完毕，剩下的工作流程更复杂。以后继续研究。
-  </div>
   
 </body>
 
