update media test

--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
   <br/>
 
   <div>
-     <a href = "FullScreenTEST/FullScreenTEST/test.html">test</a></br>
+     <a href = "FullScreenTEST/FullScreenTEST/test.html">testfullscreen</a></br>
+  </div>
+
+    <br/>
+
+  <div>
+     <a href = "MediaTEST/test.html">testMedia</a>
+  </br>
   </div>
 </body>
 
