--- a/MediaTEST/ByCodesType/audio/OPUS/test.html
+++ b/MediaTEST/ByCodesType/audio/OPUS/test.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-  <title>4to3</title>
+  <title>OPUS</title>
 </head>
 
 <body>
